# shortUrl

./: README.md  app.py
shorturl/: .env.demo  app.py  pyproject.toml  requirements.txt  vercel.json
shorturl/static/: script.js  styles.css
shorturl/templates/: index.html  stats.html
static/: script.js  styles.css
